# HC-Map

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  architecture.md  decisions.md  fahrplan.md  project-context.md
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
backend/: pyproject.toml
backend/app/: config.py  db.py  logging.py  main.py
backend/app/admin_ui/: setup.py
backend/app/auth/: mail.py  manager.py
backend/app/models/: application.py  base.py  catalog.py  event.py  person.py  user.py
backend/app/routes/: applications.py  catalog.py  events.py  exports.py  geocode.py  glyphs.py  persons.py
backend/app/schemas/: application.py  catalog.py  common.py  event.py  person.py
backend/app/seeds/: run.py
backend/app/services/: applications.py  catalog.py  events.py  exports.py  persons.py  search.py
backend/app/sync/: routes.py  schemas.py  services.py
backend/migrations/versions/: 20260425_1700_initial_schema.py  20260426_1830_m5b2_sync_owner_select.py  20260427_1900_m5c1b_ep_sync.py
backend/tests/: conftest.py  test_admin_ui.py  test_applications_list_api.py  test_catalog_workflow.py  test_events_live_api.py  test_geocode_proxy.py  test_health.py  test_persons_api.py  test_rls.py  test_rxdb_schema_drift.py  test_search_export_api.py  test_soft_delete_filter.py  test_sync_api.py  test_sync_application_restraints.py  test_sync_applications.py  test_sync_columns_migration.py  test_sync_conflict_resolution.py  test_sync_event_participants.py  test_sync_idempotency.py  test_sync_rls.py
docker/: Caddyfile.example  backend.Dockerfile  compose.prod.yml  compose.traefik.yml  docker-compose.yml  frontend.Dockerfile
docs/: architecture.md  blockers.md  decisions.md  fahrplan.md  framework-analyse.md  project-context.md
frontend/: .eslintrc.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(protected)/: layout.tsx  page.tsx
frontend/src/components/auth/: login-form.tsx  reset-password-form.tsx
frontend/src/components/catalog/: catalog-form-page.tsx  catalog-listing.tsx  catalog-table.tsx  lookup-form.tsx  lookup-picker.tsx  restraint-picker.tsx  restraint-type-form.tsx  status-badge.tsx
frontend/src/components/event/: application-start-sheet.tsx  event-backfill-form.tsx  event-create-form.tsx  event-detail-view.tsx  event-edit-form.tsx  live-event-view.tsx
frontend/src/components/layout/: app-shell.tsx  bottom-nav.tsx  nav.ts  sidebar.tsx  user-menu.tsx
frontend/src/components/map/: geocode-search-box.tsx  location-picker-map.tsx  map-filter-panel.tsx  map-view.tsx
frontend/src/components/pin/: pin-lock-provider.tsx
frontend/src/lib/: api.ts  auth.ts  event-backfill-validation.ts  rbac.ts  types.ts
frontend/src/styles/: globals.css
frontend/tests/: admin-api.test.tsx  catalog-forms.test.tsx  catalog-listing.test.tsx  catalog-table.test.tsx  event-backfill-form.test.tsx  event-backfill-validation.test.ts  event-detail-page.test.tsx  event-detail-view.test.tsx  event-edit-form.test.tsx  event-marker-data.test.ts  geocode-search-box.test.tsx  lookup-picker.test.tsx  map-event-filter.test.ts  map-filter-panel.test.tsx  map-url-state.test.ts  map-view.test.tsx  middleware.test.ts  replication.e2e.test.ts  reset-password-form.test.tsx  restraint-picker.test.tsx  rxdb-provider.test.tsx
frontend/tests/helpers/: sync-mock-server.ts
ops/: runbook.md
(+27 files in other folders)
