[project]
name = "hc-map-backend"
version = "0.0.0"
description = "HC-Map backend (FastAPI). Self-hosted, geo-referenced bondage event log."
requires-python = ">=3.12,<3.13"
license = { text = "UNLICENSED" }
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "structlog>=24.4,<25",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "alembic>=1.14,<2",
    "asyncpg>=0.30,<0.31",
    "psycopg[binary]>=3.2,<4",
    "geoalchemy2>=0.15,<0.16",
    "uuid-utils>=0.10,<0.11",
    "fastapi-users[sqlalchemy]>=14,<15",
    "argon2-cffi>=23.1,<24",
    "pyjwt>=2.10,<3",
    "email-validator>=2.2,<3",
    "openlocationcode>=1.0,<2",
    "httpx>=0.27,<0.28",
]

[dependency-groups]
dev = [
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "testcontainers[postgresql]>=4.8,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle / pyflakes
    "I",                  # isort
    "B",                  # bugbear
    "UP",                 # pyupgrade
    "SIM",                # simplify
    "RUF",                # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
# FastAPI dependency-injection pattern uses Depends() as default value.
"app/deps.py" = ["B008"]
"app/auth/manager.py" = ["B008"]
"app/routes/*.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "openlocationcode.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
